data/derived/sp14/progs/unify/prog0463.ml.out
Characters 144-176:
  if (randNum = 1 && randNum2 = 3) then buildSine (build(rand, depth-1)) else
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
